Cleanup hashing implementation and tests